<resources>
    <string name="app_name">Location Viewer</string>
    <string name="location_description">Location description</string>
    <string name="location_name">Location name</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="location_state">Location State</string>
    <string name="gps_coordinates">GPS Coordinates</string>
    <string name="get_location">Get location</string>
    <string name="location_permission_granted">Location permission granted</string>
    <string name="location_access_required">Location access required</string>
    <string name="ok">OK</string>
    <string name="location_unavailable">Location unavailable</string>
    <string name="weather_info_detail_txt">Temperature</string>
    <string name="temperature_detail">20 Degrees</string>
    <string name="add_location">Add Location</string>
    <string name="edit_location">Edit Location</string>
    <string name="location_details">Location Details</string>
    <string name="timestamp">Date 01/01/2019 5 pm</string>
    <string name="coordinates">Coordinates</string>
    <string name="weather_icon">Weather icon</string>


    <string-array name="location_providers">
        <item>GPS</item>
        <item>Bluetooth</item>
        <item>RFID</item>
    </string-array>
</resources>
